# Project_Sentinel

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  pico_sdk_import.cmake
.github/workflows/: pipeline.yml
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  run_tests  test_dma  test_hal_uart  test_ring_buffer
build_test/Testing/Temporary/: CTestCostData.txt
lib/unity/src/: unity.c  unity.h
src/: main.c
src/app/: sentinel_core.c  sentinel_core.h
src/common/: ring_buffer.c  ring_buffer.h
src/drivers/: ssd1306_basic.c  ssd1306_basic.h
src/hal/: hal_i2c.c  hal_i2c.h  hal_led.c  hal_led.h  hal_uart.c  hal_uart.h  hal_uart_dma.c  hal_uart_dma.h
test/: CMakeLists.txt  test_hal_uart.c  test_hal_uart_dma.c  test_ring_buffer.c  test_sentinel.c
test/unity/: unity.c  unity_internals.h
